<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_register_form_register"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="48sp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="@dimen/space_extra"
        android:layout_marginEnd="@dimen/space_extra"
        app:layout_constraintBottom_toTopOf="@+id/edt_register_form_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/edt_register_form_full_name"
        android:background="@drawable/bg_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:hint="@string/fullname"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/space_large"
        android:paddingEnd="@dimen/space_large"
        android:layout_marginBottom="@dimen/space_extra"
        android:layout_marginStart="@dimen/space_extra"
        android:layout_marginEnd="@dimen/space_extra"
        app:layout_constraintBottom_toTopOf="@id/edt_register_form_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edt_register_form_email"
        android:background="@drawable/bg_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/space_large"
        android:paddingEnd="@dimen/space_large"
        android:layout_marginTop="@dimen/space_extra"
        android:layout_marginStart="@dimen/space_extra"
        android:layout_marginEnd="@dimen/space_extra"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/edt_register_form_password"
        android:background="@drawable/bg_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/space_large"
        android:paddingEnd="@dimen/space_large"
        android:layout_marginTop="@dimen/space_extra"
        android:layout_marginStart="@dimen/space_extra"
        android:layout_marginEnd="@dimen/space_extra"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_form_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edt_register_form_password_repeat"
        android:background="@drawable/bg_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        android:paddingStart="@dimen/space_large"
        android:paddingEnd="@dimen/space_large"
        android:layout_marginTop="@dimen/space_extra"
        android:layout_marginStart="@dimen/space_extra"
        android:layout_marginEnd="@dimen/space_extra"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_form_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_form_password_repeat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginLeft="@dimen/space_extra"
        android:layout_marginRight="@dimen/space_extra"
        >

        <Button
            android:id="@+id/btn_register_form_confirm"
            android:textAllCaps="false"
            android:textSize="@dimen/textLarge"
            android:text="@string/btn_confirm"
            android:textColor="@android:color/white"
            android:layout_width="130dp"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/btn_confirm_cancel"
            android:layout_alignParentStart="true"
            />
        <Button
            android:id="@+id/btn_register_form_cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/textLarge"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white"
            android:layout_width="130dp"
            android:layout_height="@dimen/btn_height"
            android:background="@drawable/btn_confirm_cancel"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>