<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".ui.auth.AuthActivity">

    <TextView
        android:id="@+id/app_name"
        android:text="First App  on Figma"
        android:textAlignment="viewStart"
        android:textSize="48sp"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_large"
        android:layout_marginStart="@dimen/space_extra"
        android:layout_marginEnd="@dimen/space_extra"
        app:layout_constraintBottom_toTopOf="@+id/edt_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/edt_email"
        android:background="@drawable/bg_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/space_large"
        android:paddingEnd="@dimen/space_large"
        android:layout_marginTop="@dimen/space_extra"
        android:layout_marginStart="@dimen/space_extra"
        android:layout_marginEnd="@dimen/space_extra"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edt_password"
        android:background="@drawable/bg_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/space_large"
        android:paddingEnd="@dimen/space_large"
        android:layout_marginTop="@dimen/space_extra"
        android:layout_marginStart="@dimen/space_extra"
        android:layout_marginEnd="@dimen/space_extra"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textSize="@dimen/textLarge"
        android:background="@drawable/bg_btn_login"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="@dimen/space_extra"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <RelativeLayout
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/space_normal"
        >

        <TextView
            android:id="@+id/tv_forgot_password"
            android:text="@string/forget_password"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"

            />
        <TextView
            android:id="@+id/tv_register"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            />
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>